<resources>
    <string name="app_name">FlashcardQuiz</string>
    <string name="welcome_title">Welcome to History Flashcards!</string>
    <string name="welcome_description">Test your knowledge with true/false questions about historical events. Ready to begin?</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="true_text">TRUE</string>
    <string name="false_text">FALSE</string>
    <string name="next">NEXT QUESTION</string>
    <string name="app_version">v1.0.0</string>
</resources>